# chinotto

./: .env.example  .firebaserc  .gitignore  AGENTS.md  Info.plist  README.md  codesign-dev.sh  cursor.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.cargo/: config.toml
.github/: pull_request_body_jump_to_date.md  pull_request_template.md
docs/: APP_ICON.md  COMMIT_PLAN.md  analytics-design.md  app-icon.md  architecture.md  commit-convention.md  design-system-mobile-companion.md  design-system.md  development.md  firestore-sync.md  github-release-notes.md  icon-variants.md  macos-testflight.md  privacy.md  product-spec.md  recall-guardrails.md  release-checklist.md  release-macos.md  release-notes.md  release-process.md  sync-deletion-v2.md  sync-release-checklist.md  sync.md  testing-strategy.md  updater.md
scripts/: apple-release-env.example.sh  build-mas-testflight.sh  build-release-macos.sh  codesign-macos-dev.sh  extract-release-notes.py  flatten_icon_png.py  gen_tray_menu_template.py  generate-dmg-background.py  generate-macos-app-icons.sh  mas-merge-signing-entitlements.py  mas-testflight-env.example.sh  sign-macos.sh
src/: App.tsx  (+3 more)
src-tauri/: Cargo.toml  Chinotto.entitlements  Chinotto.mas.entitlements  DMG_BUNDLING_FIX.md  Info.plist  fix-dmg-bundler.py  fix-dmg-bundler.sh  oauth_loopback_page.html  tauri.conf.json
src-tauri/capabilities/: default.json  oauth-host.json
src-tauri/icons/: icon.icns
src-tauri/src/: embeddings.rs  keywords.rs  lib.rs  main.rs  native_apple_sign_in.rs  oauth_dev_bridge.rs  recall.rs  speech.rs  themes.rs  thought_trail.rs  tray_capture.rs
src-tauri/src/db/: mod.rs  schema.rs  schema.sql
(+170 files in other folders)
