[package]
name = "Chinotto"
version = "0.1.0"
description = "Minimal desktop thinking tool for capturing thoughts instantly and revisiting them later."
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "chinotto_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["image-png"] }
tauri-plugin-log = "2"
rusqlite = { version = "0.38", features = ["bundled"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
fastembed = { version = "5", default-features = false, features = ["hf-hub-native-tls", "ort-download-binaries"] }
once_cell = "1.21"
rand = "0.8"
base64 = "0.22"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
objc2 = "0.6"
objc2-app-kit = "0.3"
objc2-speech = { version = "0.3", features = ["block2", "objc2-avf-audio"] }
objc2-avf-audio = { version = "0.3", features = ["default", "block2"] }
objc2-foundation = "0.3"
block2 = "0.6"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"

[dev-dependencies]
rand_chacha = "0.3"
